--- a/Web-Micro-Services/p07.md
+++ b/Web-Micro-Services/p07.md
@@ -1,1 +1,205 @@
+# **Chapter 7: How to Ask Codex to Generate Code Correctly**
 
+## **Introduction**
+
+In this chapter, we learn how to talk to Codex in a clear way so that it generates correct code, understands your project, and improves what you already built.
+
+Think of Codex like a very smart junior developer.
+If you give clear instructions, it works perfectly.
+If you give half instructions, it guesses — and guesses may be wrong.
+
+Just like working with a real junior developer, the quality of the output depends on how clearly you explain the task.
+
+---
+
+## **Concepts**
+
+* **Good prompts = Good results**
+* **Be specific** about what you want
+* **Give Codex context** (folder structure, files, purpose)
+* **Tell Codex how to modify existing code**
+* **Tell Codex how to fix errors**
+* **Ask Codex to read your project before generating code**
+
+---
+
+## **Step-by-step Explanation**
+
+### **1. Writing Good Prompts**
+
+A good prompt simply answers these three questions:
+
+1. **What do you want?**
+   Example: “Create a FastAPI route to register a user.”
+2. **Where should it go?**
+   Example: “Place it inside `app/routes/users.py`.”
+3. **What format should the output have?**
+   Example: “Use Pydantic models and return JSON.”
+
+💡 **Simple analogy:**
+If you tell a carpenter “make a table,” he will ask:
+“What size? What wood? Where will it be used?”
+
+Codex is the same — clear instructions give perfect results.
+
+---
+
+### **2. Asking Codex to Add More Features**
+
+When your project grows, you will ask Codex to:
+
+* Add a new API
+* Add a new database table
+* Add a new function
+* Add a new microservice
+* Connect two parts of your system
+
+The right way is:
+
+* Tell Codex what feature you want
+* Tell Codex where it should be added
+* Tell Codex the existing design rules you follow
+
+💡 **Example:**
+If you already have user registration, now you want login:
+
+* Tell Codex: “Follow the same folder style and naming you used earlier.”
+
+---
+
+### **3. Getting Codex to Fix Errors**
+
+Codex is excellent at debugging if you:
+
+* Paste the **exact error message**
+* Paste the **related code**
+* Ask Codex to “explain the cause” before generating the fix
+
+This is like telling a mechanic:
+“Here is the sound my bike is making… and here is the exact part causing the issue.”
+
+Codex needs both:
+
+* The problem
+* The location
+
+---
+
+### **4. Getting Codex to Read Your Existing Project Structure**
+
+Codex works best when it knows:
+
+* Your folder structure
+* Your file names
+* Your design pattern
+* Your database schema
+* Your naming conventions
+
+You should ask Codex:
+
+> “Read my entire project structure first. Do not generate code until you understand it. Tell me when you are ready.”
+
+Once Codex reads the structure:
+
+* It follows the same style
+* It avoids creating duplicate files
+* It places new code in correct locations
+
+---
+
+## **Code Examples**
+
+### **1. Good Prompt for Generating Code**
+
+```
+Please create a new FastAPI route inside app/routes/orders.py.
+The route should:
+- Accept POST /orders
+- Take item, quantity, and customer_id
+- Validate using Pydantic model
+- Save to MySQL using SQLAlchemy
+- Return success message in JSON
+Use the same style as my existing routes in app/routes/users.py.
+```
+
+### **2. Prompt for Adding Features**
+
+```
+Add a new feature: password reset.
+Follow these rules:
+- Add route in app/routes/auth.py
+- Add function in app/services/auth_service.py
+- Add column reset_token in users table model
+Follow my existing code style.
+```
+
+### **3. Prompt for Fixing Errors**
+
+```
+Here is the error:
+
+sqlalchemy.exc.NoReferencedTableError: Foreign key associated with column 'orders.customer_id' could not find table 'customers'
+
+Here is the code:
+<PASTE THE MODEL CODE>
+
+Please explain the cause, and then generate the corrected model.
+```
+
+### **4. Prompt for Reading Project Structure**
+
+```
+Codex, first read my folder structure given below:
+
+app/
+ ├── routes/
+ │    ├── users.py
+ │    └── items.py
+ ├── services/
+ │    ├── user_service.py
+ ├── db/
+ │    ├── session.py
+ │    └── models.py
+
+Tell me when you have understood it.  
+Do not generate code until I ask.
+```
+
+---
+
+## **How Codex Helps**
+
+Codex can assist in many ways:
+
+* **Generate new API routes** quickly
+* **Extend your database models**, following your style
+* **Create new microservices** using your existing pattern
+* **Understand your entire folder structure**
+* **Debug errors** by reading the traceback and suggesting fixes
+* **Refactor messy code** into clean, readable modules
+* **Add comments and documentation** automatically
+
+Codex is like having a helpful assistant who works fast and never gets tired.
+
+---
+
+## **Small Exercise**
+
+### **Exercise 1**
+
+Write a prompt asking Codex to:
+
+* Add a `GET /books` route
+* Return a list of books
+* Use a Pydantic response model
+* Put the code inside `app/routes/books.py`
+
+### **Exercise 2**
+
+Take an error message from any old Python code and write a clear prompt that:
+
+* Includes the error
+* Includes the code
+* Asks Codex to explain and fix it
+
+---
